<resources>
    <string name="app_name">纷客</string>
    <string name="app_name_2">FUNNCO</string>
    <string name="app_name_3">Funnco</string>
    <string name="app_name_zh">纷客</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="funnco_version">1.0.2</string>
    <string name="funnco_yy">Funnco预约</string>
    <string name="setting">设置</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="schedule">日程</string>
    <string name="message">消息</string>
    <string name="event">事件</string>
    <string name="number">人数</string>
    <string name="time">时间</string>
    <string name="conventation">预约</string>
    <string name="newconvention">新增预约</string>
    <string name="service">服务</string>
    <string name="course">课程</string>
    <string name="upload">作品</string>
    <string name="imagebucket">相册</string>
    <string name="my">我的</string>
    <string name="my_zoom">个人中心</string>
    <string name="begin">开始</string>
    <string name="lostpassword">忘记密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_get_password">GetPasswordActivity</string>
    <string name="str_icon_edit">修改头像</string>
    <string name="choose_icon">选择头像</string>
    <string name="editwork">编辑作品</string>
    <string name="updatework">修改作品</string>
    <string name="mywork">我的照片</string>
    <string name="preview">预览</string>
    <string name="name">姓名</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="job_type">行业类别</string>
    <string name="fillin_authcode">输入验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_authcode">获取验证码</string>
    <string name="save">保存</string>
    <string name="save_y_n">是否保存?</string>
    <string name="submit">提交</string>
    <string name="lanuch">发布</string>
    <string name="send">发送</string>
    <string name="lanuch_service">发布服务</string>
    <string name="cancle">取消</string>
    <string name="reason_cancle_customer">取消预约原因</string>
    <string name="ok">确定</string>
    <string name="ok_regist">注册成功！</string>
    <string name="delete">删除</string>
    <string name="isdelete">是否删除</string>
    <string name="cancle_ornot_customer">是否取消此预约</string>
    <string name="logout_ornot">是否注销此次登录</string>
    <string name="success">成功</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_failure">登录失败</string>
    <string name="str_login_wukong_no">消息初始化失败，请重新登录</string>
    <string name="failue">失败</string>
    <string name="next">下一步</string>
    <string name="previous">上一步</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="servicename">服务名称</string>
    <string name="servicetime">服务时长</string>
    <string name="servicecount">服务人数</string>
    <string name="serviceprice">服务价格</string>
    <string name="servicedescribe">服务描述</string>
    <string name="fillin_eventcontent">填写事件内容</string>
    <string name="allday">全天事件</string>
    <string name="event_date">事件日期</string>
    <string name="event_repeat">重复类型</string>
    <string name="repead_mode">循环模式</string>
    <string name="enddate">结束日期</string>
    <string name="begindate">开始日期</string>
    <string name="addschedule">添加日程</string>
    <string name="begintime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="addtempevent">添加事件</string>
    <string name="scheduledetails">编辑事件</string>
    <string name="information">信息</string>
    <string name="addservice">添加服务</string>
    <string name="updateservice">修改服务</string>
    <string name="deleteservice">删除服务</string>
    <string name="album">相机胶卷</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="net_err">网络连接异常</string>
    <string name="fillout_right">请正确填写</string>
    <string name="data_err_2fresh">数据异常请刷新~~</string>
    <string name="choose_reason">请选择取消原因</string>
    <string name="user_err">用户信息异常</string>
    <string name="data_err">数据异常，请刷新！</string>
    <string name="data_null">数据为空!</string>
    <string name="customer_phone_err">客户号码异常</string>
    <string name="mobile_err">号码有误,请检查!</string>
    <string name="secondps_unsame">两次输入密码不一致</string>
    <string name="sort_by_time">时间排序</string>
    <string name="sort_by_name">字母排序</string>
    <string name="work_time">工作时间</string>
    <string name="service_together_can">可同时进行服务</string>
    <string name="funnco_start_yy">点击发布,分享您的空闲时间给客户</string>
    <string name="work_isall">已加载全部作品</string>
    <string name="success_upload">上传成功!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="addtitle">添加标题</string>
    <string name="imagedesc">图片注释</string>
    <string name="deletecurrent">删除当天日程</string>
    <string name="deleteall">删除所有</string>
    <string name="delete_y_n">确定删除？</string>
    <string name="null_up_y_n">修改未完成，确定上传？</string>
    <string name="repead_mode_notnull">循环模式不能为空</string>
    <string name="uploading">正在上传···</string>
    <string name="logining">正在登录...</string>
    <string name="submiting">正在提交...</string>
    <string name="sd_no">亲，请到应用市场进行下载！</string>
    <string name="update_version">发现新版本，是否下载？</string>
    <string name="downloading">下载</string>
    <string name="sunday">星期日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday_2">周日</string>
    <string name="monday_2">周一</string>
    <string name="tuesday_2">周二</string>
    <string name="wednesday_2">周三</string>
    <string name="thursday_2">周四</string>
    <string name="friday_2">周五</string>
    <string name="saturday_2">周六</string>
    <string name="forever">循环</string>
    <string name="sunday_3">日</string>
    <string name="monday_3">一</string>
    <string name="tuesday_3">二</string>
    <string name="wednesday_3">三</string>
    <string name="thursday_3">四</string>
    <string name="friday_3">五</string>
    <string name="saturday_3">六</string>
    <string name="choose_sex">选择性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="qr_code">二维码名片</string>
    <string name="qr_code_2">二维码</string>
    <string name="business_code">名片预览</string>
    <string name="career">职业</string>
    <string name="remark">备注名</string>
    <string name="remark_2">备注</string>
    <string name="remark_info">备注信息</string>
    <string name="personal_remark">你对Ta的个人描述</string>
    <string name="remark_moredesc">添加更多描述</string>
    <string name="duration_service_everyday">此服务每日接受预约的时间段</string>
    <string name="funnco_future">未来预约</string>
    <string name="funnco_history">历史预约</string>
    <string name="regist_new_count">注册新账号</string>
    <string name="login_by_weicat">微信号登录</string>
    <string name="weicat_title_1">欢迎预约</string>
    <string name="weicat_title_2">的时间，简单又迅速。</string>
    <string name="weicat_title_3">的日程分享</string>
    <string name="weicat_title_4">使用funnco预约我的时间，就是这么简单。</string>
    <string name="weicat_notify_title_1">亲爱的微信用户</string>
    <string name="weicat_notify_title_2">您好,</string>
    <string name="weicat_notify_title_3">为了您更好的使用Funnco服务,请关联一个Funnco账号!</string>
    <string name="weicat_notify_account_n">还没有Funnco账号?</string>
    <string name="weicat_notify_account_y">已有Funnco账号?</string>
    <string name="weicat_notify_registfaster">快速注册</string>
    <string name="weicat_notify_linknow">立即关联</string>
    <string name="weicat_bind_link">关联已有的Funnco账号</string>
    <string name="weicat_bind_fillout">请输入Funnco用户名</string>
    <string name="weicat_bind_des">关联后,您的微信账号及Funnco账号都可登录。</string>
    <string name="weicat_registfaster_des">注册后,您的微信账号及Funnco账号都可登录。</string>
    <string name="weicat_registfaster_pro">Funnco用于注册协议及隐私权政策</string>
    <string name="weicat_registfaster_agreePro">使用Funnco服务，必须同意Funnco协议。</string>
    <string name="p_fillout_">请填写</string>
    <string name="p_fillout_keywork">请输入关键字</string>
    <string name="p_fillout_nickname">请填写昵称！</string>
    <string name="p_fillout_phonenumber">请输入手机号</string>
    <string name="p_fillout_authorcode">请输入短信验证码</string>
    <string name="p_fillout_passwd">请设置密码</string>
    <string name="p_fillout_passwd_2">请确认密码</string>
    <string name="p_fillout_date_time">请正确选择日期/时间</string>
    <string name="p_fillout_date_time_2">开始时间不能大于结束时间</string>
    <string name="p_fillout_date_time_3">开始日期不能大于结束日期</string>
    <string name="p_fillout_char_en">请使用英文逗号","</string>
    <string name="p_fillout_updateok_login">密码修改成功，请重新登录！</string>
    <string name="p_fillout_sendok">发送成功！</string>
    <string name="p_fillout_career">请选择职业类别！</string>
    <string name="p_fillout_desc">请填写个人简介！</string>
    <string name="p_fillout_teamname">请填写团队名称</string>
    <string name="p_fillout_teampic">请设置团队封面</string>
    <string name="p_fillout_member_choose">请选择成员</string>
    <string name="p_fillout_service_choose">请选择服务</string>
    <string name="p_fillout_time_choose">请选择日期</string>
    <string name="p_fillout_time_point_choose">请选择时间</string>
    <string name="agreen">同意</string>
    <string name="str_agreen">@string/agreen</string>
    <string name="str_refuse">拒绝</string>
    <string name="str_agreen_done">已同意</string>
    <string name="str_refuse_done">已拒绝</string>
    <string name="null_hide">*不填即可在名片隐藏</string>
    <string name="tagether_same_persons">*可以同时预约的人数</string>
    <string name="str_introducation">简介</string>
    <string name="str_personalinfo">个人资料</string>
    <string name="str_personalinfo_edit">编辑资料</string>
    <string name="str_personalinfo_2">个人信息</string>
    <string name="str_personalinfo_3">个人描述</string>
    <string name="str_work_phone">工作电话</string>
    <string name="str_phone">电话</string>
    <string name="str_address">我的地址</string>
    <string name="str_service_my">我的服务</string>
    <string name="str_workphone_notify">多个请使用逗号","隔开</string>
    <string name="str_birthday">生日</string>
    <string name="str_conventationinfo">预约信息</string>
    <string name="str_myconventation">我的预约</string>
    <string name="str_mycustomer">通讯录</string>
    <string name="str_help_how2use">如何使用纷客？</string>
    <string name="str_welcome2use_funnco">欢迎使用Funnco</string>
    <string name="str_firstuser_notify_main">第一次打开Funnco不知道做什么？ 查看帮助，请点这里！</string>
    <string name="str_newconvention_null">亲，没有新增预约哎~</string>
    <string name="str_convention_null_notify">您目前没有新预约</string>
    <string name="str_convention_null_notify_2">您目前没有预约</string>
    <string name="str_customer_null_notify">目前无联系人,客户预约后\n会自动加入通讯录，让您更好的管理</string>
    <string name="str_myself">自己</string>
    <string name="str_teacher_choose">老师选择</string>
    <string name="str_team_joinnow">立刻加入</string>
    <string name="str_team_createnow">立刻创建</string>
    <string name="str_team_has_y">已经有团队？</string>
    <string name="str_team_has_n">还没有团队？</string>
    <string name="str_team_addnotify">一个人忙不过来？工作时没空手机？\n中小店面都需要前台来帮您预约？\nFunnco团队模式正式开启\n强大功能满足所有中小型团队及企业</string>
    <string name="str_team_created_success">恭喜！您成功创建了团队！</string>
    <string name="str_team_created_title0">管理员享有以下特权</string>
    <string name="str_team_created_title1">*给成员添加预约/事件</string>
    <string name="str_team_created_title2">*修改团队名片设置</string>
    <string name="str_team_created_title3">*管理员顾客信息加密，成员无法查看</string>
    <string name="str_team_created_title4">*添加/修改团队服务</string>
    <string name="str_team_created_title5">*邀请/移除团队成员</string>
</resources>