<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@id/llayout_head"
        layout="@layout/layout_activity_header_common"/>

    <LinearLayout
        android:id="@+id/llayout_repeadmode_chooses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llayout_foot"
        android:layout_below="@id/llayout_head"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_addservice_servicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/repead_mode"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="7"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cb_repeadmode_mon"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/monday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_tue"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/tuesday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_wed"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/wednesday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_thu"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/thursday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_fri"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/friday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_sat"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/saturday_2" />

                <CheckBox
                    android:id="@+id/cb_repeadmode_sun"
                    style="@style/style_nobutton_gray_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/selector_repeadmode_circle"
                    android:padding="0dp"
                    android:text="@string/sunday_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_switcher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/forever" />

                <com.funnco.funnco.view.switcher.SwitchView
                    android:id="@+id/sv_repeadmode_forever"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llayout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_repeadmode_begin_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_et_common"
                android:clickable="true"
                android:drawableRight="@mipmap/common_dropdown_arrow_2x"
                android:padding="15dp"
                android:text="@string/begindate" />

            <TextView
                android:id="@+id/tv_repeadmode_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_et_common"
                android:clickable="true"
                android:drawableRight="@mipmap/common_dropdown_arrow_2x"
                android:padding="15dp"
                android:text="@string/enddate" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="*点击周一至周日可选择此服务每周接受预约的日子\n关闭永久循环可选择具年-月-日"
            android:textColor="@color/color_hint_tangerine"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_worktime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/work_time" />

        <TextView
            android:id="@+id/tv_repeadmode_durationtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_common"
            android:drawableRight="@mipmap/common_dropdown_arrow_2x"
            android:hint="@string/duration_service_everyday"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/color_hint_gray_light" />
        <TextView
            android:id="@+id/tv_teacherchoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/str_teacher_choose" />
<!--android:visibility="gone"-->
        <TextView
            android:id="@+id/tv_repeadmode_teacherchoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_common"
            android:drawableRight="@mipmap/common_dropdown_arrow_2x"
            android:hint="@string/str_myself"
            android:padding="15dp"
            android:singleLine="true"
            android:visibility="gone"
            android:textColor="@color/color_hint_gray_light" />
    </LinearLayout>


    <include
        android:id="@id/llayout_foot"
        layout="@layout/layout_activity_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>