<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_transparent">

    <LinearLayout
        android:id="@id/id_layout_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dimen_common_40"
        android:layout_marginRight="@dimen/dimen_common_40"
        android:background="@drawable/shape_pw_radius_4"
        android:paddingTop="@dimen/dimen_common_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title0"
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:gravity="center"
            android:textSize="@dimen/font_size_16"
            android:background="@color/color_translucent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title1"
            android:textColor="@color/color_black_3"
            android:layout_marginTop="@dimen/dimen_common_20"
            android:paddingLeft="@dimen/dimen_common_20"
            android:textSize="@dimen/font_size_14"
            android:gravity="center_vertical|left"
            android:background="@color/color_translucent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title2"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:paddingLeft="@dimen/dimen_common_20"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/color_black_3"
            android:gravity="center_vertical|left"
            android:background="@color/color_translucent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title3"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:paddingLeft="@dimen/dimen_common_20"
            android:textColor="@color/color_black_3"
            android:textSize="@dimen/font_size_14"
            android:gravity="center_vertical|left"
            android:background="@color/color_translucent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title4"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:paddingLeft="@dimen/dimen_common_20"
            android:textColor="@color/color_black_3"
            android:textSize="@dimen/font_size_14"
            android:gravity="center_vertical|left"
            android:background="@color/color_translucent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_team_created_title5"
            android:layout_marginTop="@dimen/dimen_common_10"
            android:paddingLeft="@dimen/dimen_common_20"
            android:textColor="@color/color_black_3"
            android:textSize="@dimen/font_size_14"
            android:gravity="center_vertical|left"
            android:background="@color/color_translucent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_common_1"
            android:layout_margin="@dimen/dimen_common_5"
            android:background="@color/color_hint_gray_light"/>
        <Button
            android:id="@id/id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen_common_10"
            android:textSize="@dimen/font_size_16"
            android:background="@color/color_translucent"
            android:text="@string/ok"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_team_created_success"
        android:textColor="@color/color_white"
        android:layout_marginBottom="@dimen/dimen_common_20"
        android:layout_above="@id/id_layout_0"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_18"
        android:background="@color/color_translucent"/>
</RelativeLayout>